--- a/myblog.html
+++ b/myblog.html
@@ -46,6 +46,7 @@
 		<div id = "myDiv"> <!-- this is a comment--></div>
 		<script src="js/addLoadEvent.js"></script>
 		<script src="js/test.js"></script>
+		<script src="js/jquery-3.0.0.js"></script>
 		<script>
 		window.onload = function(){
 			var button = document.getElementById("testButton");
